[gd_scene load_steps=4 format=3 uid="uid://yrkf0ykayv6d"]

[ext_resource type="Script" path="res://scenes/pause_game_ui/pause_game_ui.gd" id="1_y0vn5"]
[ext_resource type="PackedScene" uid="uid://c1e08151bivtp" path="res://scenes/settings/settings.tscn" id="2_8djrn"]

[sub_resource type="LabelSettings" id="LabelSettings_b7yh3"]
font_size = 64

[node name="PauseGameUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0vn5")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="PauseUI" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="PauseUI"]
layout_mode = 2

[node name="UIName" type="Label" parent="PauseUI/VBox"]
layout_mode = 2
text = "Пауза"
label_settings = SubResource("LabelSettings_b7yh3")
horizontal_alignment = 1

[node name="Space" type="Control" parent="PauseUI/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="PauseUI/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Continue" type="Button" parent="PauseUI/VBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Продолжить"

[node name="Restart" type="Button" parent="PauseUI/VBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Перезагрузить"

[node name="Settings" type="Button" parent="PauseUI/VBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Настройки"

[node name="InMainMenu" type="Button" parent="PauseUI/VBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "В Главное Меню"

[node name="SettingsState" parent="." node_paths=PackedStringArray("pause_menu") instance=ExtResource("2_8djrn")]
unique_name_in_owner = true
visible = false
layout_mode = 1
pause_menu = NodePath("..")

[connection signal="pressed" from="PauseUI/VBox/Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseUI/VBox/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseUI/VBox/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseUI/VBox/Buttons/InMainMenu" to="." method="_on_in_main_menu_pressed"]
